kubernetes/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-app
  labels:
    app.kubernetes.io/name: express-app
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: main-server-service
                port: 
                  number: 80
